tests/syntax_error/dot_after_e.jou
def foo() -> None:
    x = 1e2.3  # Error: invalid number or variable name "1e2.3"
